--- a/styles/global.css
+++ b/styles/global.css
@@ -2,12 +2,14 @@
 *::before,
 *::after {
   box-sizing: border-box;
+
 }
 
 body {
   min-width: 1100px;
   margin: 0;
   font-family: Raleway, sans-serif;
+  background-color: aquamarine; /*Удалить*/
 }
 
 h1,
