--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,44 @@
-/* место для вашего кода */
+header {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 293px;
+    align-content: center;
+    justify-content: space-between;
+    max-width: 1340px;
+    margin: 0 auto;
+
+    background-color: aliceblue; /*Удалить*/
+}
+
+.navigation_container {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    align-self: center;
+    justify-self: self-start;
+    }
+.navigation_list{
+    display: flex;
+    gap: 33px;
+    list-style-type: circle;
+}
+.navigation_element{
+    list-style-type: circle;
+    font-family: Raleway, sans-serif;
+    font-size: 18px;
+}
+.navigation_element:first-child{
+    list-style-type: none;
+}
+.el-2 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    align-self: center;
+    justify-self: center;
+}
+
+.el-3 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    align-self: center;
+    justify-self: center;
+}
