--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,18 @@
-header{
+header {
     margin: auto;
-    width: 1440px;
-
-
-    background-color: bisque;
+    max-width: 1440px;
+    background-color: #F5F5F5;
 }
+
 .header_container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 293px;
     align-content: center;
     justify-content: space-between;
-    width: 1340px;
+    max-width: 1340px;
     margin: 0 auto;
-
-    background-color: aliceblue; /*Удалить*/
+    background-color: #F5F5F5;
 }
 
 .navigation_container {
@@ -22,30 +20,58 @@ header{
     grid-column-end: 2;
     align-self: center;
     justify-self: self-start;
-    }
-.navigation_list{
+}
+
+.navigation_list {
     display: flex;
     gap: 33px;
     list-style-type: circle;
 }
-.navigation_element{
+
+.navigation_element {
     list-style-type: circle;
     font-family: Raleway, sans-serif;
     font-size: 18px;
 }
-.navigation_element:first-child{
+
+.navigation_element .navigation_element_active{
     list-style-type: none;
 }
-.el-2 {
+
+.logo_img {
+    width: 130px;
+    height: 105px;
+}
+
+.logo {
     grid-column-start: 2;
     grid-column-end: 3;
     align-self: center;
     justify-self: center;
 }
 
-.el-3 {
+.header_address {
     grid-column-start: 3;
     grid-column-end: 4;
     align-self: center;
     justify-self: center;
+    width: 240px;
+    height: 97px;
+}
+
+address {
+    font-family: Raleway, sans-serif;
+    font-size: 18px;
+    font-style: normal;
+}
+
+
+.cover{
+    margin: 0 auto;
+    background-image: url(../images/cover.jpg);
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: 100%;
+    max-width: 1440px;
+    min-height: 500px;
 }
