--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,11 @@ header {
     font-size: 18px;
 }
 
-.navigation_element .navigation_element_active{
+.navigation_link.navigation_link__active {
+    text-decoration: none;
+}
+
+.navigation_element.navigation_element_active {
     list-style-type: none;
 }
 
@@ -57,6 +61,7 @@ header {
     justify-self: center;
     width: 240px;
     height: 97px;
+    margin-left: 10%;
 }
 
 address {
@@ -66,12 +71,106 @@ address {
 }
 
 
-.cover{
+.cover {
+    box-sizing: border-box;
+    position: relative;
     margin: 0 auto;
     background-image: url(../images/cover.jpg);
     background-repeat: no-repeat;
-    background-position: right center;
     background-size: 100%;
     max-width: 1440px;
-    min-height: 500px;
+    padding-top: 7%;
+}
+
+.cover:before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .5);
+
+}
+
+.cover_title {
+
+    display: block;
+    position: relative;
+    top: 50px;
+    z-index: 1;
+    color: white;
+    font-family: Raleway, sans-serif;
+    font-size: 100px;
+    margin-left: 4%;
+    margin-right: 4%;
+}
+
+.title_element1 {
+    letter-spacing: .4em;
+    display: block;
+    text-align: left;
+}
+
+.title_element_1::first-letter {
+    font-size: 130px;
+}
+
+.title_element1__mod {
+    margin-left: 1%;
+}
+
+.title_element2 {
+    display: block;
+    margin-top: 2%;
+    text-align: center;
+    letter-spacing: .4em;
+}
+
+.title_element2__mod {
+    margin-left: 1%;
+}
+
+.title_element3 {
+    margin-top: 2%;
+    display: block;
+    text-align: right;
+    letter-spacing: .4em;
+}
+
+.title_element3::first-letter {
+    margin-right: 1%;
+}
+
+.cover_description {
+    display: flex;
+    gap: 78px;
+    justify-content: right;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+    margin-top: 10%;
+    padding-bottom: 4%;
+    margin-right: 4%;
+}
+
+.cover_description__text {
+    font-size: 22px;
+    text-transform: uppercase;
+    word-spacing: 18px;
+    color: white;
+}
+
+.betting-button {
+    width: 257px;
+    height: 52px;
+    font-size: 22px;
+    text-transform: uppercase;
+    color: white;
+    padding: 12px 28px;
+    background: transparent;
+    border: 1px solid #FFF;
 }
