--- a/styles/style.css
+++ b/styles/style.css
@@ -58,7 +58,7 @@ header {
     grid-column-start: 3;
     grid-column-end: 4;
     align-self: center;
-    justify-self: center;
+    justify-self: right;
     width: 240px;
     height: 97px;
     margin-left: 10%;
@@ -79,7 +79,7 @@ address {
     background-repeat: no-repeat;
     background-size: 100%;
     max-width: 1440px;
-    padding-top: 7%;
+    padding-top: 3%;
 }
 
 .cover:before {
@@ -100,12 +100,12 @@ address {
 
     display: block;
     position: relative;
-    top: 50px;
+    top: 100px;
     z-index: 1;
     color: white;
     font-family: Raleway, sans-serif;
     font-size: 100px;
-    margin-left: 4%;
+    margin-left: 3%;
     margin-right: 4%;
 }
 
@@ -115,27 +115,28 @@ address {
     text-align: left;
 }
 
-.title_element_1::first-letter {
-    font-size: 130px;
-}
+
 
 .title_element1__mod {
     margin-left: 1%;
 }
 
 .title_element2 {
+    position: relative;
     display: block;
-    margin-top: 2%;
+    margin-top: 1%;
+    margin-right: 0.9%;
     text-align: center;
     letter-spacing: .4em;
 }
 
 .title_element2__mod {
-    margin-left: 1%;
+    margin-left: 0.5%;
 }
 
 .title_element3 {
-    margin-top: 2%;
+    margin-top: 0.3%;
+    margin-right: -4.5%;
     display: block;
     text-align: right;
     letter-spacing: .4em;
@@ -152,9 +153,9 @@ address {
     align-items: center;
     position: relative;
     z-index: 1;
-    margin-top: 10%;
-    padding-bottom: 4%;
-    margin-right: 4%;
+    margin-top: 15.5%;
+    padding-bottom: 3%;
+    margin-right: 3.5%;
 }
 
 .cover_description__text {
