--- a/styles/style.css
+++ b/styles/style.css
@@ -77,9 +77,10 @@ address {
     margin: 0 auto;
     background-image: url(../images/cover.jpg);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     max-width: 1440px;
-    padding-top: 3%;
+    padding-top: 9%;
+    padding-bottom: 3%;
 }
 
 .cover:before {
@@ -100,7 +101,6 @@ address {
 
     display: block;
     position: relative;
-    top: 100px;
     z-index: 1;
     color: white;
     font-family: Raleway, sans-serif;
@@ -114,7 +114,6 @@ address {
     display: block;
     text-align: left;
 }
-
 
 
 .title_element1__mod {
@@ -153,8 +152,7 @@ address {
     align-items: center;
     position: relative;
     z-index: 1;
-    margin-top: 15.5%;
-    padding-bottom: 3%;
+    margin-top: 8%;
     margin-right: 3.5%;
 }
 
