--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 header {
-    margin: auto;
+    margin: 0 auto;
     max-width: 1440px;
     background-color: #F5F5F5;
 }
@@ -172,4 +172,70 @@ address {
     padding: 12px 28px;
     background: transparent;
     border: 1px solid #FFF;
+}
+
+.lots {
+    margin: 180px auto 0;
+    max-width: 1440px;
+    background-color: #F5F5F5;
+
+}
+.lots_container {
+    max-width: 1340px;
+    margin: 0 auto;
+    background-color: #F5F5F5;
+}
+.lots_description {
+    font-family: Raleway, sans-serif;
+    font-size: 40px;
+    font-weight: bold;
+    margin-left: 40px;
+    margin-bottom: 27px;
+}
+
+.lots_list{
+    display: flex;
+    justify-content: space-between;
+
+}
+.lots_link {
+    font-family: Raleway, sans-serif;
+    font-size: 20px;
+    margin-left: 40px;
+    margin-top: 30px;
+}
+.container_lot{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-image: url(../images/card-lot-01.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 430px;
+    height: 450px;
+
+}
+.card_title{
+    display: block;
+    font-family: Raleway, sans-serif;
+    font-size: 22px;
+    color: #FFFFFF;
+    font-weight: bold;
+    text-decoration: underline white;
+}
+
+.card_description {
+    display: block;
+    font-family: Raleway, sans-serif;
+    font-size: 20px;
+    color: #FFFFFF;
+    text-decoration: underline white;
+
+}
+.container_link {
+
+    text-decoration: none;
+    border-bottom: 1px solid #FFFFFF;
+
+
 }
