--- a/styles/style.css
+++ b/styles/style.css
@@ -196,7 +196,7 @@ address {
 .lots_list{
     display: flex;
     justify-content: space-between;
-
+    list-style-type: none;
 }
 .lots_link {
     font-family: Raleway, sans-serif;
@@ -207,7 +207,9 @@ address {
 .container_lot{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    gap: 25%;
+    align-items: center;
     background-image: url(../images/card-lot-01.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -217,6 +219,7 @@ address {
 }
 .card_title{
     display: block;
+    width: 350px;
     font-family: Raleway, sans-serif;
     font-size: 22px;
     color: #FFFFFF;
@@ -226,14 +229,15 @@ address {
 
 .card_description {
     display: block;
+    width: 350px;
     font-family: Raleway, sans-serif;
     font-size: 20px;
     color: #FFFFFF;
-    text-decoration: underline white;
+
 
 }
 .container_link {
-
+    display: block;
     text-decoration: none;
     border-bottom: 1px solid #FFFFFF;
 
