--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
 header {
     margin: 0 auto;
     max-width: 1440px;
-    background-color: #F5F5F5;
 }
 
 .header_container {
@@ -11,9 +10,7 @@ header {
     align-content: center;
     justify-content: space-between;
     max-width: 1340px;
-    margin: 0 auto;
-
-    background-color: #F5F5F5;
+    margin: .2% auto 0;
 }
 
 .navigation_container {
@@ -28,6 +25,7 @@ header {
     gap: 33px;
     list-style-type: circle;
 }
+
 
 .navigation_element {
     list-style-type: circle;
@@ -139,8 +137,9 @@ address {
 }
 
 .title_element3 {
+
     margin-top: 0.3%;
-    margin-right: -4.5%;
+    margin-right: -4.6%;
     display: block;
     text-align: right;
     letter-spacing: .4em;
@@ -148,7 +147,7 @@ address {
 }
 
 .title_element3::first-letter {
-    margin-right: 1%;
+    margin-right: .5%;
 }
 
 .cover_description {
@@ -188,9 +187,10 @@ address {
     background-color: #F5F5F5;
 }
 
-.lot_list_item{
+.lot_list_item {
     position: relative;
 }
+
 .container_link:before {
     content: '';
     z-index: 3;
@@ -204,16 +204,19 @@ address {
     bottom: 0;
     background-color: rgba(0, 0, 0, .6);
 }
+
 main {
     margin: 0 auto;
     max-width: 1440px;
     background-color: #F5F5F5;
 }
+
 .lots_container {
     max-width: 1340px;
     margin: 0 auto;
     background-color: #F5F5F5;
 }
+
 .lots_description {
     font-family: Raleway, sans-serif;
     font-size: 40px;
@@ -226,29 +229,46 @@ main {
     display: flex;
     justify-content: space-between;
     list-style-type: none;
-    gap: 22px;
 }
+
 .lots_link {
     font-family: Raleway, sans-serif;
     font-size: 20px;
     margin-left: 40px;
     margin-top: 30px;
 }
-.container_lot {
-    display: flex;
 
-    flex-direction: column;
-    justify-content: space-evenly;
-    gap: 33%;
-    align-items: center;
+.lot_list_item {
     background-image: url(../images/card-lot-01.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
     width: 430px;
     height: 450px;
-
-
 }
+
+.lot_list_item2 {
+    background-image: url(../images/card-lot-02.jpg);
+}
+
+.lot_list_item3 {
+    background-image: url(../images/card-lot-03.jpg);
+}
+
+.container_lot {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 200px;
+}
+
+.container_lot2 {
+    gap: 30px;
+}
+
+.container_lot3 {
+    gap: 75px;
+}
+
 .card_title {
     display: block;
     position: relative;
@@ -259,7 +279,9 @@ main {
     color: #FFFFFF;
     font-weight: bold;
     text-decoration: underline white;
+    margin-right: 2%;
 }
+
 
 .card_description {
     position: relative;
@@ -272,10 +294,119 @@ main {
 
 
 }
+
 .container_link {
     display: block;
     text-decoration: none;
-    border-bottom: 1px solid #FFFFFF;
 
 
+    max-width: 370px;
+    max-height: 350px;
+    margin: 11% auto 0 9%;
+
+}
+
+.container_lot2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.card_title2 {
+
+}
+
+
+.about {
+    margin: 130px 50px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 10px;
+}
+
+.about__logo {
+    margin: 0 auto;
+    background-color: #000;
+    width: 240px;
+    height: 240px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+.about__logo-image {
+    width: 60%;
+}
+
+.about__title {
+    color: #000;
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.about__text-container {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.about__text {
+    font-size: 20px;
+    line-height: normal;
+}
+
+
+.about {
+    margin-top: 12.5%;
+}
+
+footer {
+    margin: 0 auto;
+    max-width: 1440px;
+    display: flex;
+    justify-content: space-between;
+    align-content: start;
+}
+
+.footer_container {
+    display: flex;
+    justify-content: space-between;
+    width: 1340px;
+    margin: 3.5% auto 0;
+
+}
+
+.footer_address {
+    margin: 0;
+}
+
+.navigation_list_footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.navigation_element_footer {
+    list-style-type: none;
+    font-family: Raleway, sans-serif;
+    font-size: 18px;
+}
+
+.footer_social-list {
+    list-style: none;
+    display: flex;
+    gap: 48px;
+}
+
+.footer_social-link {
+    display: block;
+    width: 48px;
+    height: 48px;
+}
+
+.footer_social-icon {
+    object-fit: cover;
 }
