--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-header {
+.header {
     margin: 0 auto;
     max-width: 1440px;
 }
@@ -10,7 +10,7 @@ header {
     align-content: center;
     justify-content: space-between;
     max-width: 1340px;
-    margin: .2% auto 0;
+    margin: 0.2% auto 0;
 }
 
 .navigation_container {
@@ -26,14 +26,13 @@ header {
     list-style-type: circle;
 }
 
-
 .navigation_element {
     list-style-type: circle;
     font-family: Raleway, sans-serif;
     font-size: 18px;
 }
 
-.navigation_link.navigation_link__active {
+.navigation_link__active {
     text-decoration: none;
 }
 
@@ -63,12 +62,11 @@ header {
     margin-left: 10%;
 }
 
-address {
+.address {
     font-family: Raleway, sans-serif;
     font-size: 18px;
     font-style: normal;
 }
-
 
 .cover {
     box-sizing: border-box;
@@ -79,11 +77,10 @@ address {
     background-size: cover;
     max-width: 1440px;
     padding-top: 11.5%;
-
 }
 
 .cover:before {
-    content: '';
+    content: "";
     display: block;
     width: 100%;
     height: 100%;
@@ -92,13 +89,10 @@ address {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, .6);
-
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
-
 .cover_title {
-
     display: block;
     position: relative;
     z-index: 1;
@@ -107,16 +101,13 @@ address {
     font-size: 100px;
     margin-left: 3%;
     margin-right: 4%;
-
 }
 
 .title_element1 {
-
-    letter-spacing: .4em;
+    letter-spacing: 0.4em;
     display: block;
     text-align: left;
 }
-
 
 .title_element1__mod {
     margin-left: 1%;
@@ -128,7 +119,7 @@ address {
     margin-top: 0.9%;
     margin-right: 0.8%;
     text-align: center;
-    letter-spacing: .35em;
+    letter-spacing: 0.35em;
 }
 
 .title_element2__mod {
@@ -137,17 +128,15 @@ address {
 }
 
 .title_element3 {
-
-    margin-top: 0.3%;
-    margin-right: -4.6%;
+    margin-top: 0.2%;
+   margin-left: 70%;
     display: block;
     text-align: right;
-    letter-spacing: .4em;
-
+    letter-spacing: 0.4em;
 }
 
 .title_element3::first-letter {
-    margin-right: .5%;
+    margin-right: 0.5%;
 }
 
 .cover_description {
@@ -160,7 +149,6 @@ address {
     margin-top: 8.5%;
     margin-right: 3.5%;
     padding-bottom: 3.5%;
-
 }
 
 .cover_description__text {
@@ -171,26 +159,25 @@ address {
 }
 
 .betting-button {
-    width: 257px;
-    height: 52px;
+    min-width: 257px;
+    min-height: 52px;
     font-size: 22px;
     text-transform: uppercase;
     color: white;
     padding: 12px 28px;
     background: transparent;
-    border: 1px solid #FFF;
+    border: 1px solid #fff;
 }
 
 .lots {
+
     margin: 180px auto 0;
     max-width: 1440px;
-    background-color: #F5F5F5;
+    background-color: #f5f5f5;
 }
 
-
-
 .container_link:before {
-    content: '';
+    content: "";
     z-index: 3;
     display: block;
     width: 100%;
@@ -200,116 +187,121 @@ address {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, .6);
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
-main {
+.main {
     margin: 0 auto;
     max-width: 1440px;
-    background-color: #F5F5F5;
+    background-color: #f5f5f5;
 }
 
-.lots_container {
-    max-width: 1340px;
-    margin: 0 auto;
-    background-color: #F5F5F5;
+.lots {
+    margin: 180px 50px;
 }
 
-.lots_description {
+.lots_heading {
+    color: #000;
     font-family: Raleway, sans-serif;
     font-size: 40px;
-    font-weight: bold;
-    margin-left: 40px;
-    margin-bottom: 27px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+    margin: 0 auto 27px 40px;
 }
 
-.lots_list {
+.lots_card-list {
     display: flex;
-    justify-content: space-between;
-    list-style-type: none;
+    flex-wrap: wrap;
+    gap: 25px;
+    list-style: none;
 }
 
-.lots_link {
-    font-family: Raleway, sans-serif;
-    font-size: 20px;
-    margin-left: 40px;
-    margin-top: 30px;
-}
-
-.lot_list_item {
-    background-image: url(../images/card-lot-01.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
+.lots_card-list-item {
     width: 430px;
-    height: 450px;
-    position: relative;
+    min-height: 450px;
+    background-color: aqua;
+    flex-grow: 1;
 }
 
-.lot_list_item2 {
-    background-image: url(../images/card-lot-02.jpg);
+.card-link {
+    display: block;
+    height: 100%;
+    text-decoration: none;
 }
 
-.lot_list_item3 {
-    background-image: url(../images/card-lot-03.jpg);
-}
-
-.container_lot {
+.card {
+    height: 100%;
     display: flex;
+    padding: 50px 40px;
     flex-direction: column;
+    flex-wrap: wrap;
     justify-content: space-between;
-    gap: 200px;
-}
-
-
-
-.container_lot3 {
-    gap: 75px;
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .card_title {
-    display: block;
-    position: relative;
-    z-index: 4;
-    width: 350px;
+    display: flex;
+    color: #fff;
     font-family: Raleway, sans-serif;
     font-size: 22px;
-    color: #FFFFFF;
-    font-weight: bold;
-    text-decoration: underline white;
-    margin-right: 2%;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+    text-decoration-line: underline;
+    text-transform: uppercase;
+    text-underline-offset: 4px;
+    z-index: 2;
 }
 
-
-.card_description {
-    position: relative;
-    z-index: 4;
-    display: block;
-    width: 350px;
+.card_text {
+    display: flex;
+    color: #fff;
     font-family: Raleway, sans-serif;
     font-size: 20px;
-    color: #FFFFFF;
-
-
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%;
+    z-index: 2;
 }
 
-.container_link {
+.first_card-image {
+    background-image: url(../images/card-lot-01.jpg);
+}
+
+.second_card-image {
+    background-image: url(../images/card-lot-02.jpg);
+}
+
+.third_card-image {
+    background-image: url(../images/card-lot-03.jpg);
+}
+
+.card::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+}
+
+.lots_look-more-link {
     display: block;
-    text-decoration: none;
-
-
-    max-width: 370px;
-    max-height: 350px;
-    margin: 11% auto 0 9%;
-
+    text-decoration: underline;
+    text-underline-offset: 4px;
+    margin: 30px auto 0 40px;
+    color: #000;
+    font-family: Raleway, sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
 }
-
-.container_lot2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 30px;
-}
-
 
 .about {
     display: grid;
@@ -352,10 +344,7 @@ main {
     line-height: normal;
 }
 
-
-
-
-footer {
+.footer {
     margin: 0 auto;
     max-width: 1440px;
     display: flex;
@@ -368,11 +357,16 @@ footer {
     justify-content: space-between;
     width: 1340px;
     margin: 3.5% auto 0;
-
+    padding-bottom: 90px;
 }
 
 .footer_address {
     margin: 0;
+    width: 240px;
+    height: 97px;
+    font-family: Raleway, sans-serif;
+    font-size: 18px;
+
 }
 
 .navigation_list_footer {
